[metadata]
name = scenariobuilder
version = 0.1.2
author = 'Michael Chapman',
author_email = 'woppin@gmail.com',
license = 'LICENSE.txt',
summary = Scenario builder for use with node terminus
url    = 'https://github.com/michaeltchapman/scenariobuilder'
description-file = 
    README

[files]
packages = 
    scenariobuilder
scripts =
    bin/sb
